Actions
Bug #10674
closedprofile: NULL pointer errors
Start date:
2019-04-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/thread.h:36, from ../../common/sys/modctl.h:35, from ../../common/dtrace/profile.c:32: ../../common/dtrace/profile.c: In function 'profile_provide': ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/dtrace/profile.c:203:11: note: in expansion of macro 'NULL' { NULL, NULL } ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'types[2].kind') #define NULL ((void *)0) ^ ../../common/dtrace/profile.c:203:11: note: in expansion of macro 'NULL' { NULL, NULL } ^~~~ ../../common/dtrace/profile.c: In function 'profile_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/dtrace/profile.c:469:18: note: in expansion of macro 'NULL' DDI_PSEUDO, NULL) == DDI_FAILURE || ^~~~ In file included from ../../common/dtrace/profile.c:36:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1aa5f89221657a92fc85060db4d7cc17b91007e1
commit 1aa5f89221657a92fc85060db4d7cc17b91007e1 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-10T06:35:46.000Z 10674 profile: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions